--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ document.addEventListener('visibilitychange', function(){
 });  
 </script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.geekzu.org">
 <link href="https://fonts.geekzu.org/css2?family=Kiwi+Maru:wght@500&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ChenYFan/chenyfan.github.io/index.css">
 </head>
 <body>
 <header class="site-header">
@@ -34,10 +34,10 @@ document.addEventListener('visibilitychange', function(){
 </div>
 <div class="hamburger-menu">
 <div class="menu-icon">
-<img src="/img/menu-icon.png" alt="menu icon">
+<img src="https://cdn.jsdelivr.net/gh/ChenYFan/chenyfan.github.io/img/menu-icon.png" alt="menu icon">
 </div>
 <div class="menu-close-icon">
-<img src="/img/x.png" alt="menu close icon"></a>
+<img src="https://cdn.jsdelivr.net/gh/ChenYFan/chenyfan.github.io/img/x.png" alt="menu close icon"></a>
 </div>
 </div>
 </header>
@@ -63,7 +63,7 @@ document.addEventListener('visibilitychange', function(){
 <div class="col-12 col-md-6 col-lg-3 no-padding">
 <div class="portfolio-content">
 <figure>
-<img src="/img/1.jpg" alt="">
+<img src="https://cdn.jsdelivr.net/gh/ChenYFan/chenyfan.github.io/img/1.jpg" alt="">
 </figure>
 <div class="entry-content flex flex-column align-items-center justify-content-center">
 <h3><a href="https://api.cyfan.top">APIS</a></h3>
@@ -77,7 +77,7 @@ document.addEventListener('visibilitychange', function(){
 <div class="col-12 col-md-6 col-lg-3 no-padding">
 <div class="portfolio-content">
 <figure>
-<img src="/img/2.jpg" alt="">
+<img src="https://cdn.jsdelivr.net/gh/ChenYFan/chenyfan.github.io/img/2.jpg" alt="">
 </figure>
 <div class="entry-content flex flex-column align-items-center justify-content-center">
 <h3><a href="https://chat.cyfan.top">Chat Board</a></h3>
@@ -91,7 +91,7 @@ document.addEventListener('visibilitychange', function(){
 <div class="col-12 col-md-6 col-lg-3 no-padding">
 <div class="portfolio-content">
 <figure>
-<img src="/img/3.jpg" alt="">
+<img src="https://cdn.jsdelivr.net/gh/ChenYFan/chenyfan.github.io/img/3.jpg" alt="">
 </figure>
 <div class="entry-content flex flex-column align-items-center justify-content-center">
 <h3><a href="https://status.cyfan.top/">Status</a></h3>
@@ -105,7 +105,7 @@ document.addEventListener('visibilitychange', function(){
 <div class="col-12 col-md-6 col-lg-3 no-padding">
 <div class="portfolio-content">
 <figure>
-<img src="/img/4.jpg" alt="">
+<img src="https://cdn.jsdelivr.net/gh/ChenYFan/chenyfan.github.io/img/4.jpg" alt="">
 </figure>
 <div class="entry-content flex flex-column align-items-center justify-content-center">
 <h3><a href="https://cyfan.top/privacy-policy/">Privacy Policy</a></h3>
@@ -119,7 +119,7 @@ document.addEventListener('visibilitychange', function(){
 <div class="col-12 col-md-6 col-lg-3 no-padding">
 <div class="portfolio-content">
 <figure>
-<img src="/img/5.jpg" alt="">
+<img src="https://cdn.jsdelivr.net/gh/ChenYFan/chenyfan.github.io/img/5.jpg" alt="">
 </figure>
 <div class="entry-content flex flex-column align-items-center justify-content-center">
 <h3><a href="https://github.com/chenyfan">My Github</a></h3>
@@ -135,7 +135,7 @@ document.addEventListener('visibilitychange', function(){
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@2.2.4"></script>
-<script type="text/javascript" src="index.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/ChenYFan/chenyfan.github.io/index.js"></script>
 
 
 </body></html>
